--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,45 @@
-#register{
-  background:url(https://images.unsplash.com/photo-1531297484001-80022131f5a1?q=80&w=2020&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)no-repeat center;
-  background-size: cover;
-  min-height: 70vh;
-}
+
 *{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+}
+
+.colors{
+  background-color: red !important;
+}
+.dialog{
+  position: fixed;
+  left: 0;
+  top:0;
+  height: 100vh;
+  background-color: #0000003d;
+  width: 100%;
+}
+.dialog iframe{
+  width: 100%;
+  min-height: 100vh;
+}
+
+
+/* .documentviewer */
+.documentviewer iframe{
+  width: 100%;
+  min-height: 100vh;
+  background-color: black;
+}
+
+.close-btn{
+  position: absolute;
+  top: 3%;
+  right:2%;
+  border:2px solid #000000;
+  
+  background-color: white;
+  border-radius: 100px;
+  outline: 3px solid #fff;
+  outline-offset: 10px;
+}
+
+
+.viewdocument iframe{
+  min-height: 100vh;
 }
