--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,8 +1,34 @@
-.course-card img{
-    height: 250px;
+.courses-card img{
+    height: 150px;
     object-fit: cover;
-    border-radius: 10px;
 }
-.course-card-heading{
-    text-transform:lowercase;
+.courses-card{
+    border-radius: 20px !important;
+    overflow: hidden;
+}
+.dark-btn{
+    background-color: rgb(237, 10, 33) !important;
+    color: #fff !important;
+}
+.light-btn{
+    background-color: rgba(163, 163, 163, 0.422) !important;
+    color: #000000 !important;
+}
+.btns button{
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+.tag{
+    background-color: rgba(237, 10, 33, 0.263);
+    color: rgb(237, 10, 33);
+    padding: 10px;
+    font-size: 1.3rem;
+}
+.courses-card .card-body i{
+    color: rgb(237, 10, 33);
+    margin-right: 10px;
+}
+.course-container{
+    background-color: rgb(232, 232, 232);
 }
